  and in the "_inbsp/stats" web interface. The script nbspstats was revised
  to accept a "-p <logperiod>" option.
- Fixed problem with filter queue growing with several slaves in
  mempsool mode (spoolslots.c missing a pthred_cond_signal() call).
- In the gpfilter, each decoder is opened with a "permanent" pipe.
- Revised (and corrected) the statistic plots: Added size in fmtoptions
  in inventory.conf (and removed set size in template files), and
  corrected the template setting for the -r option in nbspstatplot1.
- Revised nbspradmap and nbspradmapc such that the later can create
  loops from the individual images.
- Added nbspsatmapc for similar purposes and revised the web server
  to generate radar and sat loops dynamically.
- Fixed error in rstfilter.lib creating sat maps (reported by Bill Dosser);
  check of rstfilter(satmap_regex) should be with uwildmat and not just regex.
- Revised default bundle configuration of gisfilter.
- Revised and corrected: tclupperair, uafilter and wsfilter
- Revised tclgrads such that Expect is no longer used. (The Expect
  package is no longer required in the main package. It is still used
  in the sample shell applications.)

2.2.2
-
- Revision of nbspgribrsh (and the companion catalog tools)
- Added -nobody in call to filterslib in gribfilter
- Added nbspgisradmap and nbspgissatmap
- Revised msgfilter to add appropriate headers to the message. Added
  separate function to send sms messages using sendmail in case
  tcllib based function does not work for some addresses
- Removed binary options in fconfigure in Tclgrads that eliminated
  problems with gfs_161.tcl hanging in SL-6.1.
- Add K4M9 to metarfilter (Jason Brooks)
- Fixed the problem with dcgrib2 (reported by Jason Brooks) by calling
  fconfigure with binary options after opening the pipe to the decoders.
- Revised locking mechanism in the dynamic generation of sat images

2.2.2.r4
- nbspmtrd (Coesmetic change: Corrected optlist)
- nbspmtrplotdat revised