@@ -37,6 +37,7 @@ set feature(trackfilter) 0
 set feature(spoolfilter) 0
 set feature(nbspfilter) 0
 #
+set feature(arcfilter) 0
 set feature(clusterfilter) 0
 
 set feature(netfilter)		1
