@@ -21,6 +21,7 @@ set feature(trackfilter) 0
 set feature(spoolfilter) 0
 set feature(nbspfilter) 0
 
+set feature(arcfilter) 0
 set feature(clusterfilter) 0
 
 set feature(netfilter)		1
@@ -80,7 +81,7 @@ if {$feature(inventory) == 1} {
 }
 foreach k [list rst da grib metar ua \
 	ws gis gp ldm nntp \
-        msg pan track spool nbsp cluster] {
+        msg pan track spool nbsp arc cluster] {
 
     if {[info exists feature(${k}filter)] == 0} {
 	continue;
