@@ -48,10 +48,6 @@
 ## set archive(da,file_regex) {.*};
 ## set archive(da,sat_regex) {.*};
 ## set archive(da,rad_regex) {.*};
-#
-# exec tar in the background
-#
-## set archive(da,asyncmode) 1;
 
 #
 # metar
