@@ -127,3 +127,4 @@
 2.2.2.r4
 - nbspmtrd (Coesmetic change: Corrected optlist)
 - nbspmtrplotdat revised
+- Added arcfilter
